# CleanSheet

./: README.md  environment.yml  epoch_99.pth  generate_kd.py  packet.py  poison_dataset.py  pyproject.toml  resnet.py  utils.py  vgg.py
models/: mobilenet_v2.py  resnet.py
tests/: conftest.py
tests/data/config/: anti_kd_t-r34_s-r18-v16-mv2_cifar10.py  cifar10_resnet18.py  simple_config.py
tests/test_config/: test_config.py
tests/test_data/test_dataset/: test_cifar.py  test_flowers102.py  test_gtsrb.py  test_svhn.py  utils.py
tests/test_network/: test_trigger.py
tests/test_network/test_cifar/: test_network.py
tests/test_trainer/: test_anti_kd.py
