[tool.poetry]
name = "anti-kd-backdoor"
version = "0.1.0"
description = ""
authors = ["wutongshenqiu <44188071+wutongshenqiu@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "anti_kd_backdoor"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = [
    {url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    {url = "https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'"}
]
torchvision = [
    {url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    {url = "https://download.pytorch.org/whl/cpu/torchvision-0.13.1%2Bcpu-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'"}
]
addict = "^2.4.0"
yapf = "^0.32.0"
tensorboard = "^2.10.1"
tqdm = "^4.64.1"
timm = "^0.6.11"
geotorch = "^0.3.0"
torchdiffeq = "^0.2.3"
pandas = "^1.5.1"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"


[tool.poetry.group.tools.dependencies]
gpustat = "^1.0.0"
netron = "^6.0.9"
pyecharts = "^1.9.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
